static/plugins/youmax/youmax.css
/* YOUMAX */

.youmax-showing {
	color: whitesmoke;
	font-weight: normal;
	text-shadow: none;
}

.youmax-duration {
	background-color: #2E323D;
	color: white;
	padding: 2px 3px;
	font-weight: bold;
	position: absolute;
	bottom: 0;
	right: 0;
	opacity: 0.8;
}

#youmax-header {
	display: none;
	background-color: #2E323D;
	font: 24px Arial;
	color: white;
	line-height: 25px;
	height: 90px;
	text-align: left;
	position: relative;
}

#youmax-header a {
	color: white;
}

.youmax-stat {
	float: right;
	margin: 10px;
	font: 10px Arial;
	color: #ccc;
	margin-top: 25px;
	text-align: center;
}

#youmax-stat-holder {
	float: right;
	height: 100%;
}

.youmax-stat-count {
	font: 18px Arial;
}

#youmax-channel-desc {
	text-align: left;
}

#youmax {
	width: 100%;
	max-width: 1000px;
	margin: 0px auto;
	font-size: 14px;
	overflow-x: hidden;
	overflow-y: hidden;
}

.youmax-video-tnail {
	width: 100%;
	background-repeat: no-repeat;
	background-size: cover;
	height: 140px;
	position: relative;
}

.youmax-video-tnail-box {
	margin-bottom: 20px;
	overflow: hidden;
	cursor: pointer;
	cursor: hand;
	background-color: #edf6f5;
  border-radius: 10px;
  transition: .2s ease;
}

.youmax-video-tnail-box:hover {
  box-shadow: 0 12px 24px -6px rgba(45,67,121,.1) !important;
}

#youmax-encloser {}

#youmax-video-list-div {
	padding-top: 20px;
}

.youmax-video-list-title {
	color: #0aa8a7;
	display: inline-block;
	padding: 15px 20px;
  font-weight: bold;
  font-size: 15px;
	max-width: 350px;
  height: 60px;
	overflow: hidden;
}

.youmax-video-list-views {
	color: #555;
	padding: 1% 10px;
	padding-bottom: 3%;
  display: none;
}

.youmax-playlist-sidebar {
	background-color: rgba(0, 0, 0, 0.8);
	float: right;
	max-width: 50%;
	height: 100%;
	color: white;
	text-align: left;
	width: 70px;
}

.youmax-playlist-video-count {
	display: inline-block;
	margin: 3%;
	margin-top: 5%;
	height: 20%;
	margin-top: 55px;
}

.youmax-playlist-sidebar-video {
	opacity: 1;
	width: 64px;
	height: 20%;
	background-color: rgb(114, 114, 114);
	display: inline-block;
	margin: 2% auto;
	background-size: cover;
	background-position: center center;
	background-repeat: no-repeat;
}

.youmax-tab {
	background-color: rgb(230, 230, 230);
	color: #666;
	text-shadow: 0 1px 0 #fff;
	display: inline-block;
	margin: 5px;
	margin-top: 10px;
	padding: 5px;
	cursor: pointer;
	cursor: hand;
}

#youmax-tabs {
	text-align: left;
	background-color: rgb(230, 230, 230);
	padding-left: 10px;
	border-left: 1px solid #cccccc;
	border-right: 1px solid #cccccc;
	font-size: 18px;
}

#youmax-lightbox {
	position: fixed;
	background-color: rgba(0, 0, 0, 0.9);
	z-index: 100;
	width: 100%;
	height: 100%;
	left: 0;
	top: 0;
}

#youmax-video-lightbox {
	opacity: 1;
}

.youmax-subscribe div {
	position: static !important;
	vertical-align: top !important;
}

.youmax-subscribe iframe {
	position: static !important;
}

.youmax-subscribe {
	display: inline-block;
	width: 150px;
	height: 25px;
	overflow: hidden;
	position: absolute;
	top: 0;
	margin: auto;
	bottom: 0;
	right: 0;
}

#youmax-header-logo {
	vertical-align: middle;
	height: 60px;
	margin: 15px;
	display: inline-block;
	margin-left: 32px;
}

div#youmax-load-more-div {
	/* height: 40px; */
	padding: 10px;
	margin: 15px 30px;
	font-size: 18px;
	border: 1px solid #ccc;
	cursor: pointer;
}

.youmax-tab-hover {
	color: #eee;
	background-color: #999;
	text-shadow: 0 0;
}

.youmax-showing-title {
  color: #0aa8a7;
  display: inline-block;
  padding: 10px;
  font-weight: bold;
  font-size: 15px;
  max-width: 350px;
  max-height: 50px;
  overflow: hidden;
}

iframe#youmax-video {
	margin-bottom: 20px !important;
}

.youmax-load-more-div-click {
	background: darkgray;
	color: white;
}

#youmax-load-more-div:hover {
	background: darkgray;
	color: white;
}

.promoting-card {
	border: none;
}

@media (max-width: 576px) {
	.youmax-subscribe {
		margin-bottom: 0;
	}
}

